--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^4.5.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
